# pre-commit-python

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
app/: test.py
src/: test.py
