[tool.poetry]
name = "pre-commit-python"
version = "0.1.0"
description = ""
authors = ["Evans Pauliuts <pauliutsevans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
