[tool.poetry]
name = "pre-commit-python"
version = "0.1.0"
description = ""
authors = ["Evans <pauliutsevans@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11"
pre-commit = "^3.3.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
