[tool.poetry]
name = "pre-commit-python"
version = "0.1.0"
description = ""
authors = ["Evans <pauliutsevans@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11"
pre-commit = "^3.3.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# === Black ===
[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
/(
    | dist
    | .pytest_cache
    | .tox
    | docs
    | docs_src
    | .venv
    | .mypy_cache
)/
'''

# === Isort ===
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_glob = []

# === Mypy ===
[tool.mypy]
python_version = "3.11"
files = ['*.py', '**/*.py']
no_site_packages = true
follow_imports = "skip"
ignore_missing_imports = true
strict_optional = false
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
disallow_any_unimported = true
